[package]
name = "pnp_app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
druid = { version = "0.8.3", features = ["im"] }
serde = { version = "1.0.153", features = ["derive"] }
serde_json = "1.0.94"
directories = "4.0.1"
im = "15.1.0"